chore: 4g/5g symmetry
